# nessclient

./: .flake8  .gitignore  .travis.yml  AGENTS.md  D8-32X Serial Protocol Public.md  LICENSE  MANIFEST.in  Pipfile  README.md  azure-pipelines.yml  codecov.yml  decode-test.py  ip232-test.py  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: workflow.yaml
docs/: api.md  api.rst  cli.md  conf.py  developing.md  examples.md  index.md  requirements.txt
examples/: __init__.py  listening_for_events.py  sending_commands.py  streaming_events.py
nessclient/: __init__.py  alarm.py  client.py  connection.py  event.py  packet.py
nessclient/cli/: __init__.py  __main__.py  events.py  logging_connection.py  send_command.py  tui.py
nessclient/cli/server/: __init__.py  alarm.py  alarm_server.py  aux_output.py  output.py  server.py  zone.py
nessclient_tests/: __init__.py  test_alarm.py  test_client.py  test_event.py  test_integration.py  test_packet.py
nessclient_tests/fixtures/: real_captured_test_data.py  sample_output.txt
py_ness_232/: __init__.py  alarm.py  client.py  connection.py  event.py  packet.py
py_ness_232/cli/: __main__.py  events.py  send_command.py
py_ness_232/cli/server/: __init__.py  alarm_server.py  server.py
py_ness_232_tests/: test_event.py  test_packet.py
py_ness_232_tests/fixtures/: sample_output.txt
resources/: data.txt  data2.txt
stubs/: justbackoff.pyi  serial.pyi  serial_asyncio.pyi
