[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nessclient"
dynamic = ["version"]
description = "Implementation/abstraction of the Ness D8x / D16x Serial Interface ASCII protocol"
readme = "README.md"
license = "MIT"
authors = [{name = "Nick Whyte", email = "nick@nickwhyte.com"}]
urls = {"Homepage" = "https://github.com/nickw444/nessclient"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
]
requires-python = ">=3.8"
dependencies = [
    "justbackoff",
    "dataclasses; python_version < \"3.7\"",
    "pyserial_asyncio_fast",
]

[project.optional-dependencies]
cli = ["click"]

[project.scripts]
ness-cli = "nessclient.cli.__main__:cli"

[dependency-groups]
dev = [
    "codecov",
    "mypy",
    "types-setuptools",
    "types-pyserial",
    "types-click",
    "ruff",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "click",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["nessclient*"]

[tool.setuptools_scm]
version_file = "nessclient/_version.py"

[tool.ruff]
line-length = 90
extend-exclude = ["docs", "nessclient/_version.py"]

[tool.ruff.lint]
ignore = ["E261", "E203"]

[tool.pylint.main]
ignore-patterns = ["_version.py"]
jobs = 0

[tool.pylint.messages_control]
disable = ["C0116", "C0209", "R1705", "W0223", "R0801"]

[tool.pylint.format]
max-line-length = 90

[tool.pylint.design]
max-args = 8
max-attributes = 9
max-returns = 10
max-positional-arguments = 8
